hphp/hack/test/decl/unnamed_variadic_method_parameter.php.typecheck.exp
File "unnamed_variadic_method_parameter.php", line 4, characters 31-33:
Was expecting a type hint on this variadic parameter (Typing[4033])
